# DhanRadar

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  CLAUDE.md  README.md  agent.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_auth_init.py  0002_billing_plans.py  0003_plan_billing_fields.py  0004_mf_schema.py  0005_notify_schema.py  0006_compliance_schema.py  0007_mood_schema.py  0008_admin_compliance_tables.py  0008_mf_nav_monthly_agg.py  0008a_mf_nav_monthly_agg.py  0009_engine_activation_unique.py  0010_consent_audit_log.py  0011_pro_access.py  0012_score_history.py  0013_mf_portfolios.py  0014_audit_ledger.py  0015_education_schema.py  0016_news_items.py  0017_concepts_schema.py  0018_google_sso.py  0019_mf_nav_ingested_at.py  0020_mf_nav_compression.py  0021_mf_fund_metrics.py  0022_mf_funds_category_index.py  0022_mf_funds_cohort_key_indexes.py  0023_mf_portfolios_latest_job.py  0023_user_fund_scores_flags.py  0024_mf_fund_ranks.py  0025_mf_funds_plan_option.py  0026_mf_fund_metrics_short_horizons.py  0027_signal_schema.py  0028_signal_journal_phase2.py  0029_signal_notifications.py  0030_signal_history.py  0031_signal_sip_achievements.py  0032_mf_funds_launch_date_segregated.py  0033_mf_fund_constituents.py  0034_score_history_composite_index.py  0035_phase3_schema_lineage_manager_audit.py  0036_admin_data_quality_issues.py  (+47 more)
backend/dhanradar/: __init__.py  budget.py  celery_app.py  config.py  db.py  db_schemas.py  db_security.py  deps.py  errors.py  main.py  middleware.py  observability.py  ratelimit.py  redis_client.py  storage.py
backend/dhanradar/admin/: __init__.py  _people.py  aiops_router.py  aiops_schemas.py  amc_coverage_router.py  amc_coverage_schemas.py  billing_router.py  billing_schemas.py  manual_ingest_router.py  manual_ingest_schemas.py  ops_router.py  ops_schemas.py  platform_router.py  platform_schemas.py  router.py  schemas.py  scoring_read_schemas.py  scoring_router.py  users_router.py  users_schemas.py
backend/dhanradar/ai_feedback/: router.py
backend/dhanradar/ai_gateway/: __init__.py  errors.py  gateway.py  metrics.py  quality.py  schemas.py
backend/dhanradar/audit/: __init__.py  service.py
backend/dhanradar/auth/: __init__.py  email_otp.py  google.py  router.py  schemas.py  security.py  service.py
backend/dhanradar/billing/: __init__.py  router.py  schemas.py  service.py
backend/dhanradar/bse/: __init__.py  router.py  schemas.py  security.py  service.py
backend/dhanradar/changes/: __init__.py  router.py  schemas.py  service.py
backend/dhanradar/compliance/: __init__.py  router.py  schemas.py  service.py
backend/dhanradar/concepts/: __init__.py  content.py  router.py  schemas.py  seed.py  service.py
backend/dhanradar/consent/: __init__.py  router.py  schemas.py  service.py
backend/dhanradar/core/: logging.py
backend/dhanradar/dashboard/: __init__.py  indices.py  router.py  schemas.py  service.py  ticker.py
backend/dhanradar/education/: __init__.py  calendar.py  content.py  router.py  schemas.py  seed.py  service.py
backend/dhanradar/insights/: router.py  schemas.py  service.py
backend/dhanradar/market_data/: __init__.py  adapter.py  amc_expense.py  amc_expense_sbi.py  amc_managers.py  amc_managers_nippon.py  amc_managers_uti.py  amc_registry.py  amfi.py  amfi_cap_classification.py  amfi_category_flows.py  amfi_scheme_master.py  breadth.py  circuit_breaker.py  config.py  events.py  exceptions.py  rbi.py  rbi_tbill.py  sebi.py
backend/dhanradar/mf/: __init__.py  benchmark_alpha.py  benchmark_map.py  benchmark_mapping.py  cas.py  category_series.py  cohort.py  commentary.py  comparison.py  concepts.py  concepts_registry.json  disclosure_parsers.py  fund_events.py  fund_name_overrides.json  fund_read.py  history.py  ledger.py  risk.py  (+13 more)
backend/scripts/: audit_fund_short_names.py  check_migration_collisions.py  cleanup_constituent_rows.sql  gen_jwt_keys.py
backend/tests/: conftest.py  test_logging_redaction.py
(+1042 files in other folders)
