[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dhanradar"
version = "0.1.0"
description = "DhanRadar — AI-powered Indian mutual fund & stock radar"
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic-generated migrations are immutable boilerplate — don't lint/reformat them.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501: handled by line-length/formatter. UP042: keep `(str, enum.Enum)` — StrEnum changes
# str(member) ("X.free" → "free"), risky for the load-bearing tier/scoring/label enums used in
# DB columns + string comparisons; (str, Enum) is intentional, not a bug.
ignore = ["E501", "UP042"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Lock the fixture loop scope to function (matches db_engine/db_tables scope)
# and silence pytest-asyncio's "unset loop scope" deprecation warning.
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Hard per-test timeout (CI safety net) — a hung test fails with a traceback
# pinpointing the stall instead of stalling the whole job (a DB-lock deadlock once
# hung the backend job for 37 min). Generous vs the ~70s full-suite runtime.
timeout = 180
markers = [
    "integration: requires a live Postgres database and fakeredis (deselect with -m 'not integration')",
]
filterwarnings = [
    "ignore::DeprecationWarning:fakeredis",
    "ignore::DeprecationWarning:asyncio",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
