[project]
name = "dhanradar-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111", "uvicorn[standard]>=0.30", "pydantic>=2", "pydantic-settings>=2",
  "sqlalchemy[asyncio]>=2", "asyncpg>=0.29", "alembic>=1.13",
  "redis>=5", "celery>=5", "elasticsearch>=8",
  "argon2-cffi>=23", "pyjwt[crypto]>=2.8", "python-multipart>=0.0.9",
  "httpx>=0.27", "razorpay>=1.4", "pgvector>=0.3", "opentelemetry-sdk>=1.25",
]
[project.optional-dependencies]
dev = ["pytest>=8","pytest-asyncio>=0.23","pytest-cov>=5","ruff>=0.5","mypy>=1.10","trivy"]
[tool.ruff]
line-length = 100
[tool.mypy]
strict = true
